--- a/index.html
+++ b/index.html
@@ -118,6 +118,28 @@
                         <div class="team-card-text">
                             <h3 class="team-member">Mark Guerrero</h3>
                             <p class="member-position">Product Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-card">
@@ -125,6 +147,28 @@
                         <div  class="team-card-text">
                             <h3 class="team-member">Tom Ford</h3>
                             <p class="member-position">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-card">
@@ -132,6 +176,28 @@
                         <div class="team-card-text">
                             <h3 class="team-member">Camila Garcia</h3>
                             <p class="member-position">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a class="social-link link" href="">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-card">
@@ -139,7 +205,77 @@
                         <div class="team-card-text">
                             <h3 class="team-member">Daniel Wilson</h3>
                             <p class="member-position">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-item"><a href="" class="social-link link">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a href="" class="social-link link">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a href="" class="social-link link">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                                <li class="social-item"><a href="" class="social-link link">
+                                    <svg class="social-icon" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
+                            </ul>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="customers">
+            <div class="container">
+                <ul class="customers-list list">
+                    <li class="customers-item">
+                        <a href="" class="customers-link link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-client-logo1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-client-logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-client-logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-client-logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-client-logo5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-client-logo6"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
