finished social & customers icons

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             </div>
         </section>
         <section class="customers">
+            <h2 class="customers-title">Customers</h2>
             <div class="container">
                 <ul class="customers-list list">
                     <li class="customers-item">
