changed advantages section

--- a/index.html
+++ b/index.html
@@ -61,19 +61,43 @@
             <div class="container">
                 <h2 class="visually-hidden">Our advantages</h2>
                 <ul class="list advantages-list">
-                    <li class="advantages-item">
+                    <li class="advantages-item">  
+                        <div class="advantages-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-advantages-antenna">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-tile">Strategy</h3>
                         <p class="advantages-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="advantages-item">
+                        <div class="advantages-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-advantages-clock">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-tile">Punctuality</h3>
                         <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="advantages-item">
+                        <div class="advantages-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-advantages-diagram">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-tile">Diligence</h3>
                         <p class="advantages-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="advantages-item">
+                        <div class="advantages-icon">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-advantages-astronaut">
+                                </use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-tile">Technologies</h3>
                         <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
@@ -290,6 +314,7 @@
                 </a>
                 <p class="invitation">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
+            
         </div>
     </footer>  
         
