--- a/index.html
+++ b/index.html
@@ -308,13 +308,45 @@
     </main>
 
     <footer class="footer-section">
-        <div class="container">
-            <div class="footer-block">
-                <a class="logo-footer link" href="./index.html">web<span class="logo-footer-studio">studio</span>
+        <div class="container footer-container">
+            <div class="footer-box">
+                <a class="footer-logo link" href="./index.html">web<span class="footer-logo-studio">studio</span>
                 </a>
-                <p class="invitation">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                <p class="footer-invitation">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
-            
+            <div class="footer-social-box">
+                <h2 class="footer-title">Social media</h2>
+                <ul class="footer-list list">
+                    <li class="footer-item">
+                        <a class="footer-link link" href="">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link link" href="">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link link" href="">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a class="footer-link link" href="">
+                            <svg class="social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>  
         
